# test-analysis-recommendation-vertex-ai-rag

./: .dockerignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt  result.txt  token_log.json  token_logger.py
_archived/: token_log.json
_data/courses/: course.csv
_data/data_cs/: Answer.csv  ExamAnswerResult.csv  ExamQuestionResult.csv  ExamResult.csv  Question.csv  q_a.csv
_data/exam_result/: Answer.csv  ExamAnswerResult.csv  ExamQuestionResult.csv  ExamResult.csv  Question.csv
_log/: run_log.json  token_log.json
agents/: agent1_test_context.py  agent2_incorrect_questions.py  agent3_weakness_extraction.py  agent4_course_recommendation.py  agent5_user_facing_response.py  gemini_embeddings.py
api_spec/: API_spec.md
archived/: step01_embed_data.py  step02_index.py
pipeline/: run_logging.py  run_pipeline.py
prerequisite_vector_search/: query_vector_search_sdk.py  step01_ingest_and_deploy.py  test_query.py
validation/: merge_exam_results.py  merge_questions_answers.py  questions_by_domain.py
validation/_data_for_validation/: exam_result_flat.csv  questions_by_domain.csv  questions_with_choices.csv
